2016-08-07  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-07-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-06-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-06-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* opengl-bindings.gemspec: Fixed invalid license value (zlib/libpng -> Zlib). See http://spdx.org/licenses .
	* sample/glfw32_build_dylib.sh: GLFW 3.2 build script for Mac OS X.

2016-06-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-05-26  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-05-05  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.2 features.

2016-04-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/Gosu/lesson01.rb: Added.

2016-04-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-04-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.
	* lib/glfw.rb: Now usable for GLFW 3.0, 3.1 and 3.2.
	* lib/glfw30.rb, lib/glfw31.rb, lib/glfw32.rb: Removed.

2016-04-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-04-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* README.md: Tested on Windows 10 and NVIDIA GeForce GTX 960.

2016-04-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Just an alias of glfw.rb.
	* glfw32.rb: GLFW binding for version 3.2 (renamed from previous glfw.rb).

2016-04-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.2 features.

2016-03-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.2 features.
	* glfw31.rb: Previous version of 'glfw.rb' is available as 'glfw31.rb'.

2016-02-06  vaiorabbit  <http://twitter.com/vaiorabbit>

	* README.md: Added projects using this gem.

2016-01-09  vaiorabbit  <http://twitter.com/vaiorabbit>
